--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
+# Necessary to prevent problems when using a controller named "index" and having a root index.php
+# more here: http://stackoverflow.com/q/20918746/1114320
+Options -MultiViews
+
 # Activates URL rewriting (like myproject.com/controller/action/1/2/3)
 RewriteEngine On
 
