--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 # Necessary to prevent problems when using a controller named "index" and having a root index.php
-# more here: http://stackoverflow.com/q/20918746/1114320
+# more here: http://httpd.apache.org/docs/2.2/content-negotiation.html
 Options -MultiViews
 
 # Activates URL rewriting (like myproject.com/controller/action/1/2/3)
