--- a/.htaccess
+++ b/.htaccess
@@ -10,11 +10,12 @@ Options -Indexes
 
 # When using the script within a sub-folder, put this path here, like /mysubfolder/
 # If your app is in the root of your web folder, then leave it commented out
-RewriteBase /php-mvc/
+RewriteBase /
 
 # General rewrite rules
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-l
 
-RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
+RewriteCond $1#%{REQUEST_URI} ([^#]*)#(.*)\1$
+RewriteRule ^(.+)$ %2index.php?url=$1 [QSA,L]
