--- a/.htaccess
+++ b/.htaccess
@@ -12,9 +12,20 @@ Options -Indexes
 # If your app is in the root of your web folder, then leave it commented out
 RewriteBase /php-mvc/
 
-# General rewrite rules
+# If the following conditions are true, then rewrite the URL.
+
+# If the requested filename is not a directory
 RewriteCond %{REQUEST_FILENAME} !-d
+
+# and if the requested filename is not a regular file that exists
 RewriteCond %{REQUEST_FILENAME} !-f
+
+# and if the requested filename is not a symbolic link
 RewriteCond %{REQUEST_FILENAME} !-l
 
+# then rewrite the URL in the following way:
+# Take the whole request filename and provide it as the value of a
+# "url" query parameter to index.php. Append any query string from
+# the original URL as further query parameters (QSA), and stop
+# processing this .htaccess file (L).
 RewriteRule ^(.+)$ index.php?url=$1 [QSA,L]
