--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "support": {
         "issues": "https://github.com/panique/mini/issues",
-        "source": "https://github.com/panique/mini
+        "source": "https://github.com/panique/mini"
     },
     "require": {
         "php": ">=5.3.0"
