[PHP7] upgraded to work with PHP 7.x

--- a/_vagrant/Vagrantfile
+++ b/_vagrant/Vagrantfile
@@ -7,7 +7,8 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "ubuntu/trusty64"
+  # We use the latest Ubuntu 20.04
+  config.vm.box = "ubuntu/focal64"
 
   # Create a private network, which allows host-only access to the machine using a specific IP.
   config.vm.network "private_network", ip: "192.168.33.44"
